# corfu-ai

./: .gitignore  README.md
ai-lap/ai/: ai-app.py  ai_app.py  server.py
ai-lap/ai/templates/: index.html
ai-lap/embeddings/: Dockerfile  build.sh  cache.py  embeddings.py  requirements.txt
ai-lap/examples/: Makefile  questions.txt
ai-lap/examples/logs/dataset/: test.json
ai-lap/experiment/: open_llama_3b.py  roberta-large-english.py  sentiment_analisys.py  tiny_llama_1b.py
ai-lap/experiment/fine_tuning/: roberta.py
ai-lap/experiment/sentiment/: ollama.py  open_llama_3b.py  roberta-large-english.py  tiny_llama_1b.py
ai-lap/experiment/zero_shot/: fb_bart_large.py
ai-lap/filebeat/: Dockerfile  dataset_transformer.py  docker-compose.yml  filebeat.yml  logs-processing.sh
ai-lap/filebeat/logs/example/: corfu.9000.log.small
ai-lap/rust/model/: Cargo.toml
ai-lap/rust/model/src/: main.rs
